kubernetes/apps/hasura/hasura/app/graphqlengine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hasura-graphql-engine
  annotations:
  labels:
    app: hasura-graphql-engine
spec:
  selector:
    app: hasura-graphql-engine
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura-graphql-engine
  labels:
    app: hasura-graphql-engine
spec:
  selector:
    matchLabels:
      app: hasura-graphql-engine
  replicas: 1
  template:
    metadata:
      annotations:
      labels:
        app: hasura-graphql-engine
    spec:
      containers:
        - name: graphql-engine
          image: hasura/graphql-engine:v2.49.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
