kubernetes/apps/hasura/hasura/app/postgres.yaml
---
# Source: graphql-engine/charts/postgres/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura-postgres
  namespace: default
  labels:
    app: hasura-postgres
spec:
  selector:
    app: hasura-postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura-postgres
  labels:
    app: hasura-postgres
spec:
  selector:
    matchLabels:
      app: hasura-postgres
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      annotations:
      labels:
        app: hasura-postgres
    spec:
      volumes:
        - name: postgres-data  
          persistentVolumeClaim:
            claimName: hasura-postgres-data
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:       
            - name: postgres-data
              mountPath: "/var/lib/postgresql/data"
