kubernetes/apps/hasura/hasura/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hasura-graphql-engine
  labels:
    app: hasura-graphql-engine
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
  - host: graphql-dev.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: hasura-graphql-engine
            port:
              number: 8080
        pathType: Prefix
        path: /
